<resources>
    <string name="app_name">Movie Digger</string>

    <!-- All three tabs at the top -->
    <string name="tab_upcoming">UPCOMING</string>
    <string name="tab_released">RELEASED</string>
    <string name="tab_trailers">TRAILERS</string>

    <!-- Upcoming tab -->
    <string name="upcoming_title">Title</string>
    <string name="upcoming_genres">Genres</string>
    <string name="upcoming_released">Released</string>

    <string name="upcoming_movie_description">Movie description</string>

    <!-- Movie item fragment -->
    <string name="movie_item_header_overview">Overview</string>
    <string name="movie_item_header_genres">Genres: </string>

    <!-- Released tab -->
    <string name="header_rating">Rating ▼</string>
    <string name="header_category">Genre ▼</string>

    <!-- Rating dropdown menu -->
    <string name="rating_none">None</string>
    <string name="rating_lowest">Lowest</string>
    <string name="rating_highest">Highest</string>

    <!-- Category dropdown menu -->
    <string name="all">All</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war_western">War Western</string>

    <!-- Map fragment -->
    <string name="nearby_movie_theater">Nearby Movie Theaters</string>

    <!-- Notification fragment -->
    <string name="notificationOn">Bell</string>
    <string name="notificationOff">bell_off</string>
    <string name="x">X</string>

</resources>