<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/category_all"
        android:title="@string/all" />

    <item android:id="@+id/category_action"
        android:title="@string/action" />

    <item android:id="@+id/category_adventure"
        android:title="@string/adventure" />

    <item android:id="@+id/category_comedy"
        android:title="@string/comedy" />

    <item android:id="@+id/category_crime"
        android:title="@string/crime" />

    <item android:id="@+id/category_documentary"
        android:title="@string/documentary" />

    <item android:id="@+id/category_drama"
        android:title="@string/drama" />

    <item android:id="@+id/category_family"
        android:title="@string/family" />

    <item android:id="@+id/category_fantasy"
        android:title="@string/fantasy" />

    <item android:id="@+id/category_history"
        android:title="@string/history" />

    <item android:id="@+id/category_horror"
        android:title="@string/horror" />

    <item android:id="@+id/category_music"
        android:title="@string/music" />

    <item android:id="@+id/category_mystery"
        android:title="@string/mystery" />

    <item android:id="@+id/category_romance"
        android:title="@string/romance" />

    <item android:id="@+id/category_science_fiction"
        android:title="@string/music" />

    <item android:id="@+id/category_tv_movie"
        android:title="@string/tv_movie" />

    <item android:id="@+id/category_thriller"
        android:title="@string/thriller" />

    <item android:id="@+id/category_war_western"
        android:title="@string/war_western" />
</menu>