<?xml version="1.0" encoding="utf-8"?>

<!--
NOTICE that this is a scrollview because the user must be able to scroll down to for example
see the entire overview description of the movie. So if the content is to long the user
can scroll down to see more
-->
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">


        <ImageView
            android:id="@+id/movie_item_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/movie_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="13dp"
            android:text="@string/upcoming_title"
            android:textSize="22sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/movie_item_image"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/movie_item_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="140 min | "
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_item_image" />

        <TextView
            android:id="@+id/movie_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/movie_item_release_date"
            app:layout_constraintTop_toBottomOf="@+id/movie_item_image" />

        <TextView
            android:id="@+id/movie_item_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/movie_item_runtime"
            app:layout_constraintTop_toBottomOf="@+id/movie_item_image" />

        <TextView
            android:id="@+id/movie_item_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="TextView"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_item_genres_header" />

        <TextView
            android:id="@+id/movie_item_header_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/movie_item_header_overview"
            android:textSize="22sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/movie_item_overview"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/movie_item_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_item_image" />

        <TextView
            android:id="@+id/movie_item_genres_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_item_header_genres"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_item_runtime" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>