<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"
    app:cardCornerRadius="2dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/upcoming_image"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/upcoming_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/upcoming_title"

            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/upcoming_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/upcoming_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:text="@string/upcoming_genres"
            android:textColor="@color/text"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/upcoming_image"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_title" />

        <TextView
            android:id="@+id/upcoming_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/upcoming_released"
            android:textColor="@color/text"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/upcoming_image"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_release_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

    <!--
    <?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/upcoming_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/upcoming_movie_description"
            android:padding="0dp"
            android:scaleType="fitStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/upcoming_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:text="@string/upcoming_title"

            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/upcoming_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/upcoming_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:text="@string/upcoming_genres"
            android:textColor="@color/text"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/upcoming_image"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_title" />

        <TextView
            android:id="@+id/upcoming_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/upcoming_released"
            android:textColor="@color/text"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/upcoming_image"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_release_date" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/top_bar"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>-->
